# deploy

./: ChangeLog  README.rst
deploy/installer/: Makefile.am  configure.ac
deploy/installer/rules/: binutils.mk  mgsim.mk
installer/: Makefile.am  README  bootstrap  configure.ac  deslenv.in  slenv.in  slversion.in
installer/patches/: gcc-patch-5.1.0.patch  gcc-patch-5.4.0.patch  gcc-patch-formats-5.4.0.patch  gcc-patch-intdiv-5.4.0.patch  m4-patch-file-line.patch  m4-patch-gnulib.patch
installer/rules/: binutils.mk  binutilsng.mk  gcc.mk  gcc5.mk  hlsimcore.mk  m4.mk  mgsim.mk  ptl.mk  slc.mk  slenv.mk
